@@ -1255,7 +1255,7 @@ class ImgWPlus(aipy.img.ImgW):
 		self.bm = []
 		for i in range(mf_order+1):
 			self.bm.append(numpy.zeros(shape=self.shape, dtype=numpy.complex64))
-		self.wres = wres
+		self.wres = float(wres)
 		self.wcache = {}
 	
 	def put(self, (u,v,w), data, wgts=None, invker2=None):
@@ -1535,17 +1535,21 @@ def buildGriddedImage(dataDict, MapSize=80, MapRes=0.50, MapWRes=0.10, pol='xx',
 	if not verbose:
 		sys.stdout.close()
 		sys.stdout = sys.__stdout__
-	
+		
 	return im
 
 
-def plotGriddedImage(ax, gimg, shifted=True, interpolation='nearest', **kwargs):
+def plotGriddedImage(ax, gimg, shifted=True, origin='lower', interpolation='nearest', **kwargs):
 	"""
 	Given a blank matplotlib axes instance and a gridded image generated by 
 	the buildGriddedImage() function, plot the image on the axes and setup
-	the basic coordinate system.  This function returns the NumPy array of
-	the image that is plotted.
+	the basic coordinate system.  This function returns the matplotlib object
+	added to the plot
 	
+	.. versionchanged:: 1.2.1
+		Changed the function to return the matplotlib object plotted so
+		that colorbars can be added
+		
 	.. versionchanged:: 1.1.0
 		Added a 'shifted' keyword to control whether or not the image
 		is centered or not.
@@ -1562,10 +1566,16 @@ def plotGriddedImage(ax, gimg, shifted=True, interpolation='nearest', **kwargs):
 		img = numpy.roll(img, imgSize/2, axis=0)
 		img = numpy.roll(img, imgSize/2, axis=1)
 		
+	# Get the extent in L and M
+	l, m = gimg.get_LM()
+	lmin, lmax = l.min(), l.max()
+	mmin, mmax = m.min(), m.max()
+	extent = (mmax,mmin, lmin,lmax)
+	if origin != 'lower':
+		extent = (mmin,mmax, lmin,lmax)
+		
 	# Plot
-	ax.imshow(img, extent=(1,-1,-1,1), origin='lower', interpolation=interpolation, **kwargs)
-	
-	return img
+	return ax.imshow(img, extent=extent, origin=origin, interpolation=interpolation, **kwargs)
 
 
 def _radec_of(aa, az, alt):
